--- a/bsconfig.json
+++ b/bsconfig.json
@@ -1,11 +1,21 @@
 {
   "name": "rescript-validator",
   "version": "0.0.1",
-  "sources": {
-    "dir" : "src",
-    "subdirs" : true
-  },
+  "sources": [
+    {
+      "dir": "src",
+      "subdirs": true
+    },
+    {
+      "dir": "test",
+      "type": "dev",
+      "subdirs": true
+    }
+  ],
   "warnings": {
-    "error" : "+101"
-  }
+    "error": "+101"
+  },
+  "bs-dev-dependencies": [
+    "rescript-benchmarkjs"
+  ]
 }
