improvements on data validation report type; add tests; add 'resultTree' type;

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -16,6 +16,7 @@
     "error": "+101"
   },
   "bs-dev-dependencies": [
-    "rescript-benchmarkjs"
+    "rescript-benchmarkjs",
+    "@glennsl/bs-jest"
   ]
 }
